got rid of context manager when establishing wrds connections

--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -114,7 +114,7 @@
     "        Done\n",
     "        \"\"\"\n",
     "        self._verbose = verbose\n",
-    "        self._password = os.getenv(\"WRDS_PASS\",\"\")\n",
+    "        self._password = os.getenv(\"WRDS_PASS\",\"\") # MION: originally this was self._password = \"\"\n",
     "        # If user passed in any of these parameters, override defaults.\n",
     "        self._username = kwargs.get(\"wrds_username\", \"\")\n",
     "        # PGHOST if set will override default for first attempt\n",
@@ -129,7 +129,7 @@
     "            self.connect()\n",
     "            self.load_library_list()\n",
     "\n",
-    "    def __make_sa_engine_conn(self, raise_err=False):\n",
+    "    def __make_sa_engine_conn(self, raise_err=True):  #MION changed raise_err default to True\n",
     "        username = self._username\n",
     "        hostname = self._hostname\n",
     "        password = urllib.parse.quote_plus(self._password)\n",
@@ -198,10 +198,12 @@
     "        self.engine = None\n",
     "\n",
     "    def __enter__(self):\n",
+    "        print(\"Making connection\")\n",
     "        self.connect()\n",
     "        return self\n",
     "\n",
     "    def __exit__(self, *args):\n",
+    "        print(\"closing connection\")\n",
     "        self.close()\n",
     "\n",
     "    def load_library_list(self):\n",
@@ -726,8 +728,18 @@
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "\n",
-    "    with Connection(wrds_username = wrds_username) as db:\n",
+    "    #The context manager does not seem to close connections properly\n",
+    "    #with Connection(wrds_username = wrds_username) as db:\n",
+    "    #    df = db.raw_sql(sql=sql_string, params=params)\n",
+    "\n",
+    "    try:\n",
+    "        db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))\n",
     "        df = db.raw_sql(sql=sql_string, params=params)\n",
+    "    except Exception as err:\n",
+    "        raise err \n",
+    "    finally:\n",
+    "        db.close()\n",
+    "\n",
     "    return df"
    ]
   },
@@ -858,68 +870,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1158</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>0.0665</td>\n",
-       "      <td>0.0502</td>\n",
-       "      <td>-0.0405</td>\n",
-       "      <td>0.0035</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.1598</td>\n",
-       "      <td>2023-01-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1159</th>\n",
-       "      <td>2023-02-01</td>\n",
-       "      <td>-0.0258</td>\n",
-       "      <td>0.0121</td>\n",
-       "      <td>-0.0078</td>\n",
-       "      <td>0.0034</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0021</td>\n",
-       "      <td>2023-02-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1160</th>\n",
-       "      <td>2023-03-01</td>\n",
-       "      <td>0.0251</td>\n",
-       "      <td>-0.0559</td>\n",
-       "      <td>-0.0901</td>\n",
-       "      <td>0.0036</td>\n",
-       "      <td>2023.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-0.0250</td>\n",
-       "      <td>2023-03-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1161</th>\n",
        "      <td>2023-04-01</td>\n",
        "      <td>0.0061</td>\n",
-       "      <td>-0.0334</td>\n",
-       "      <td>-0.0003</td>\n",
+       "      <td>-0.0335</td>\n",
+       "      <td>-0.0004</td>\n",
        "      <td>0.0035</td>\n",
        "      <td>2023.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>0.0165</td>\n",
+       "      <td>0.0162</td>\n",
        "      <td>2023-04-28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1162</th>\n",
        "      <td>2023-05-01</td>\n",
        "      <td>0.0035</td>\n",
-       "      <td>0.0153</td>\n",
-       "      <td>-0.0780</td>\n",
+       "      <td>0.0160</td>\n",
+       "      <td>-0.0771</td>\n",
        "      <td>0.0036</td>\n",
        "      <td>2023.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>-0.0063</td>\n",
        "      <td>2023-05-31</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1163</th>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>0.0646</td>\n",
+       "      <td>0.0154</td>\n",
+       "      <td>-0.0026</td>\n",
+       "      <td>0.0040</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>-0.0237</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1164</th>\n",
+       "      <td>2023-07-01</td>\n",
+       "      <td>0.0321</td>\n",
+       "      <td>0.0205</td>\n",
+       "      <td>0.0412</td>\n",
+       "      <td>0.0045</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-0.0398</td>\n",
+       "      <td>2023-07-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1165</th>\n",
+       "      <td>2023-08-01</td>\n",
+       "      <td>-0.0239</td>\n",
+       "      <td>-0.0317</td>\n",
+       "      <td>-0.0105</td>\n",
+       "      <td>0.0045</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0377</td>\n",
+       "      <td>2023-08-31</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1163 rows × 9 columns</p>\n",
+       "<p>1166 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -930,11 +942,11 @@
        "3     1926-10-01 -0.0324 -0.0009  0.0070  0.0032  1926.0   10.0     NaN   \n",
        "4     1926-11-01  0.0253 -0.0010 -0.0051  0.0031  1926.0   11.0     NaN   \n",
        "...          ...     ...     ...     ...     ...     ...    ...     ...   \n",
-       "1158  2023-01-01  0.0665  0.0502 -0.0405  0.0035  2023.0    1.0 -0.1598   \n",
-       "1159  2023-02-01 -0.0258  0.0121 -0.0078  0.0034  2023.0    2.0  0.0021   \n",
-       "1160  2023-03-01  0.0251 -0.0559 -0.0901  0.0036  2023.0    3.0 -0.0250   \n",
-       "1161  2023-04-01  0.0061 -0.0334 -0.0003  0.0035  2023.0    4.0  0.0165   \n",
-       "1162  2023-05-01  0.0035  0.0153 -0.0780  0.0036  2023.0    5.0 -0.0063   \n",
+       "1161  2023-04-01  0.0061 -0.0335 -0.0004  0.0035  2023.0    4.0  0.0162   \n",
+       "1162  2023-05-01  0.0035  0.0160 -0.0771  0.0036  2023.0    5.0 -0.0063   \n",
+       "1163  2023-06-01  0.0646  0.0154 -0.0026  0.0040  2023.0    6.0 -0.0237   \n",
+       "1164  2023-07-01  0.0321  0.0205  0.0412  0.0045  2023.0    7.0 -0.0398   \n",
+       "1165  2023-08-01 -0.0239 -0.0317 -0.0105  0.0045  2023.0    8.0  0.0377   \n",
        "\n",
        "          dateff  \n",
        "0     1926-07-31  \n",
@@ -943,13 +955,13 @@
        "3     1926-10-30  \n",
        "4     1926-11-30  \n",
        "...          ...  \n",
-       "1158  2023-01-31  \n",
-       "1159  2023-02-28  \n",
-       "1160  2023-03-31  \n",
        "1161  2023-04-28  \n",
        "1162  2023-05-31  \n",
+       "1163  2023-06-30  \n",
+       "1164  2023-07-31  \n",
+       "1165  2023-08-31  \n",
        "\n",
-       "[1163 rows x 9 columns]"
+       "[1166 rows x 9 columns]"
       ]
      },
      "execution_count": null,
@@ -985,6 +997,25 @@
     }
    ],
    "source": [
+    "db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))\n",
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
     "#| eval: false\n",
     "db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
    ]
@@ -997,7 +1028,7 @@
     {
      "data": {
       "text/plain": [
-       "['aha_sample', 'ahasamp', 'audit', 'audit_acct_os', 'audit_audit_comp']"
+       "['aha_sample', 'audit', 'audit_acct_os', 'audit_audit_comp', 'audit_common']"
       ]
      },
      "execution_count": null,
@@ -1040,7 +1071,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Approximately 879854 rows in comp.funda.\n"
+      "Approximately 881223 rows in comp.funda.\n"
      ]
     },
     {
@@ -1166,54 +1197,54 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1926-07-01</td>\n",
-       "      <td>0.0296</td>\n",
-       "      <td>-0.0256</td>\n",
-       "      <td>-0.0243</td>\n",
-       "      <td>0.0022</td>\n",
+       "      <td>0.029600</td>\n",
+       "      <td>-0.025600</td>\n",
+       "      <td>-0.024300</td>\n",
+       "      <td>0.00220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1926-08-01</td>\n",
-       "      <td>0.0264</td>\n",
-       "      <td>-0.0117</td>\n",
-       "      <td>0.0382</td>\n",
-       "      <td>0.0025</td>\n",
+       "      <td>0.026400</td>\n",
+       "      <td>-0.011700</td>\n",
+       "      <td>0.038200</td>\n",
+       "      <td>0.00250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1926-09-01</td>\n",
-       "      <td>0.0036</td>\n",
-       "      <td>-0.0140</td>\n",
-       "      <td>0.0013</td>\n",
-       "      <td>0.0023</td>\n",
+       "      <td>0.003600</td>\n",
+       "      <td>-0.014000</td>\n",
+       "      <td>0.001300</td>\n",
+       "      <td>0.00230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1926-10-01</td>\n",
-       "      <td>-0.0324</td>\n",
-       "      <td>-0.0009</td>\n",
-       "      <td>0.0070</td>\n",
-       "      <td>0.0032</td>\n",
+       "      <td>-0.032400</td>\n",
+       "      <td>-0.000900</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.00320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1926-11-01</td>\n",
-       "      <td>0.0253</td>\n",
-       "      <td>-0.0010</td>\n",
-       "      <td>-0.0051</td>\n",
-       "      <td>0.0031</td>\n",
+       "      <td>0.025300</td>\n",
+       "      <td>-0.001000</td>\n",
+       "      <td>-0.005100</td>\n",
+       "      <td>0.00310</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date   mktrf     smb     hml      rf\n",
-       "0  1926-07-01  0.0296 -0.0256 -0.0243  0.0022\n",
-       "1  1926-08-01  0.0264 -0.0117  0.0382  0.0025\n",
-       "2  1926-09-01  0.0036 -0.0140  0.0013  0.0023\n",
-       "3  1926-10-01 -0.0324 -0.0009  0.0070  0.0032\n",
-       "4  1926-11-01  0.0253 -0.0010 -0.0051  0.0031"
+       "         date      mktrf        smb        hml       rf\n",
+       "0  1926-07-01   0.029600  -0.025600  -0.024300  0.00220\n",
+       "1  1926-08-01   0.026400  -0.011700   0.038200  0.00250\n",
+       "2  1926-09-01   0.003600  -0.014000   0.001300  0.00230\n",
+       "3  1926-10-01  -0.032400  -0.000900   0.007000  0.00320\n",
+       "4  1926-11-01   0.025300  -0.001000  -0.005100  0.00310"
       ]
      },
      "execution_count": null,
