--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -69,16 +69,21 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_m(wrds_username: str=None) -> pd.DataFrame:\n",
+    "def gvkey_permno_m(wrds_username: str=None,\n",
+    "                   obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "                   ) -> pd.DataFrame:\n",
     "    \"\"\"CRSP Monthly ids, with gvkeys\"\"\"\n",
     "\n",
-    "    sql_string=\"\"\"SELECT a.date, a.permno, c.gvkey\n",
+    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
+    "    sql_string=f\"\"\"SELECT a.date, a.permno, c.gvkey\n",
     "                  FROM crsp.msf a\n",
     "                  INNER JOIN crsp.msenames b ON a.permno = b.permno\n",
     "                                             AND a.date BETWEEN b.namedt AND b.nameendt \n",
     "                  INNER JOIN crsp.ccmxpf_lnkhist c ON a.permno = c.lpermno \n",
     "                                                   AND c.linktype IN ('LU','LC') AND c.linkprim IN ('P','C')\n",
-    "                                                   AND a.date BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\"\"\"\n",
+    "                                                   AND a.date BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\n",
+    "                    {limit_clause}                                   \n",
+    "                \"\"\"\n",
     "    \n",
     "    df = wrds_api.download(sql_string, wrds_username)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='date', freq='M',\n",
@@ -103,7 +108,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df = gvkey_permno_m()"
+    "df = gvkey_permno_m(obs_limit=100)"
    ]
   },
   {
@@ -175,55 +180,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3930676</th>\n",
-       "      <td>93436</td>\n",
-       "      <td>2022-08</td>\n",
-       "      <td>184996</td>\n",
+       "      <th>95</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1992-07</td>\n",
+       "      <td>012994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3930677</th>\n",
-       "      <td>93436</td>\n",
-       "      <td>2022-09</td>\n",
-       "      <td>184996</td>\n",
+       "      <th>96</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1992-08</td>\n",
+       "      <td>012994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3930678</th>\n",
-       "      <td>93436</td>\n",
-       "      <td>2022-10</td>\n",
-       "      <td>184996</td>\n",
+       "      <th>97</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1992-09</td>\n",
+       "      <td>012994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3930679</th>\n",
-       "      <td>93436</td>\n",
-       "      <td>2022-11</td>\n",
-       "      <td>184996</td>\n",
+       "      <th>98</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1992-10</td>\n",
+       "      <td>012994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3930680</th>\n",
-       "      <td>93436</td>\n",
-       "      <td>2022-12</td>\n",
-       "      <td>184996</td>\n",
+       "      <th>99</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1992-11</td>\n",
+       "      <td>012994</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3930681 rows × 3 columns</p>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         permno    Mdate   gvkey\n",
-       "0         10000  1986-01  013007\n",
-       "1         10000  1986-02  013007\n",
-       "2         10000  1986-03  013007\n",
-       "3         10000  1986-04  013007\n",
-       "4         10000  1986-05  013007\n",
-       "...         ...      ...     ...\n",
-       "3930676   93436  2022-08  184996\n",
-       "3930677   93436  2022-09  184996\n",
-       "3930678   93436  2022-10  184996\n",
-       "3930679   93436  2022-11  184996\n",
-       "3930680   93436  2022-12  184996\n",
+       "    permno    Mdate   gvkey\n",
+       "0    10000  1986-01  013007\n",
+       "1    10000  1986-02  013007\n",
+       "2    10000  1986-03  013007\n",
+       "3    10000  1986-04  013007\n",
+       "4    10000  1986-05  013007\n",
+       "..     ...      ...     ...\n",
+       "95   10001  1992-07  012994\n",
+       "96   10001  1992-08  012994\n",
+       "97   10001  1992-09  012994\n",
+       "98   10001  1992-10  012994\n",
+       "99   10001  1992-11  012994\n",
        "\n",
-       "[3930681 rows x 3 columns]"
+       "[100 rows x 3 columns]"
       ]
      },
      "execution_count": null,
@@ -233,7 +238,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df.head(0)"
+    "df"
    ]
   },
   {
@@ -243,15 +248,20 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_a(wrds_username: str=None) -> pd.DataFrame:\n",
+    "def gvkey_permno_a(wrds_username: str=None,\n",
+    "                   obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "                   ) -> pd.DataFrame:\n",
     "    \"\"\"qvkey to permno correspondence at the annual frequency. As done by CCM.\"\"\"\n",
     "\n",
+    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
     "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno\n",
     "                    FROM comp.funda a\n",
     "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
     "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
     "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
-    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
+    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
+    "                    {limit_clause}            \n",
+    "                \"\"\"\n",
     "    \n",
     "    df = wrds_api.download(sql_string, wrds_username)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='A',\n",
@@ -276,7 +286,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df = gvkey_permno_a()"
+    "df = gvkey_permno_a(obs_limit=100)"
    ]
   },
   {
@@ -311,14 +321,92 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10015</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10015</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10015</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10023</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>001002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10031</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>001003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>61903</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>001005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>61903</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>001005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>61903</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>001005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>61903</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>001005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>61903</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>001005</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [permno, Adate, gvkey]\n",
-       "Index: []"
+       "    permno Adate   gvkey\n",
+       "0    10015  1983  001001\n",
+       "1    10015  1984  001001\n",
+       "2    10015  1985  001001\n",
+       "3    10023  1972  001002\n",
+       "4    10031  1983  001003\n",
+       "..     ...   ...     ...\n",
+       "95   61903  1977  001005\n",
+       "96   61903  1978  001005\n",
+       "97   61903  1979  001005\n",
+       "98   61903  1980  001005\n",
+       "99   61903  1981  001005\n",
+       "\n",
+       "[100 rows x 3 columns]"
       ]
      },
      "execution_count": null,
@@ -328,7 +416,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df.head(0)"
+    "df"
    ]
   },
   {
@@ -338,15 +426,20 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_q(wrds_username: str=None) -> pd.DataFrame:\n",
+    "def gvkey_permno_q(wrds_username: str=None,\n",
+    "                   obs_limit : int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "                   ) -> pd.DataFrame:\n",
     "    \"\"\"qvkey to permno correspondence at the quarterly frequency. As done by CCM.\"\"\"\n",
     "    \n",
+    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
     "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno\n",
     "                    FROM comp.fundq a\n",
     "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
     "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
     "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
-    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
+    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'            \n",
+    "                    {limit_clause}\n",
+    "                \"\"\"\n",
     "    \n",
     "    df = wrds_api.download(sql_string, wrds_username)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Q',\n",
@@ -371,7 +464,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df = gvkey_permno_q()"
+    "df = gvkey_permno_q(obs_limit=100)"
    ]
   },
   {
@@ -406,14 +499,92 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10006</td>\n",
+       "      <td>1967Q4</td>\n",
+       "      <td>001010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10006</td>\n",
+       "      <td>1968Q1</td>\n",
+       "      <td>001010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10015</td>\n",
+       "      <td>1983Q3</td>\n",
+       "      <td>001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10015</td>\n",
+       "      <td>1983Q4</td>\n",
+       "      <td>001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10015</td>\n",
+       "      <td>1984Q1</td>\n",
+       "      <td>001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>54594</td>\n",
+       "      <td>1979Q1</td>\n",
+       "      <td>001004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>54594</td>\n",
+       "      <td>1979Q2</td>\n",
+       "      <td>001004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>54594</td>\n",
+       "      <td>1979Q3</td>\n",
+       "      <td>001004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>54594</td>\n",
+       "      <td>1979Q4</td>\n",
+       "      <td>001004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>54594</td>\n",
+       "      <td>1980Q1</td>\n",
+       "      <td>001004</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [permno, Qdate, gvkey]\n",
-       "Index: []"
+       "    permno   Qdate   gvkey\n",
+       "0    10006  1967Q4  001010\n",
+       "1    10006  1968Q1  001010\n",
+       "2    10015  1983Q3  001001\n",
+       "3    10015  1983Q4  001001\n",
+       "4    10015  1984Q1  001001\n",
+       "..     ...     ...     ...\n",
+       "95   54594  1979Q1  001004\n",
+       "96   54594  1979Q2  001004\n",
+       "97   54594  1979Q3  001004\n",
+       "98   54594  1979Q4  001004\n",
+       "99   54594  1980Q1  001004\n",
+       "\n",
+       "[100 rows x 3 columns]"
       ]
      },
      "execution_count": null,
@@ -423,7 +594,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df.head(0)"
+    "df"
    ]
   },
   {
