got rid of context manager when establishing wrds connections

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -1752,14 +1752,184 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10026</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>7976.0</td>\n",
+       "      <td>-0.100016</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.100016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10028</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>7978.0</td>\n",
+       "      <td>0.607407</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.607407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10032</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>7980.0</td>\n",
+       "      <td>-0.075643</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.075643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10044</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>7992.0</td>\n",
+       "      <td>-0.098592</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.098592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10051</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>7999.0</td>\n",
+       "      <td>-0.115176</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.115176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11407</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>53120.0</td>\n",
+       "      <td>0.050475</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.050475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11441</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>9278.0</td>\n",
+       "      <td>0.152941</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.152941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11442</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>9280.0</td>\n",
+       "      <td>-0.069555</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.069555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11481</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>9312.0</td>\n",
+       "      <td>0.030530</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.030530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11499</th>\n",
+       "      <th>2020-01</th>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>-0.007833</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.007833</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, exchcd, shrcd, dlstcd, dlret, ret_adj]\n",
-       "Index: []"
+       "                      date     dtdate   permco       ret  exchcd  shrcd  \\\n",
+       "permno Mdate                                                              \n",
+       "10026  2020-01  2020-01-31 2020-01-31   7976.0 -0.100016     3.0   11.0   \n",
+       "10028  2020-01  2020-01-31 2020-01-31   7978.0  0.607407     2.0   11.0   \n",
+       "10032  2020-01  2020-01-31 2020-01-31   7980.0 -0.075643     3.0   11.0   \n",
+       "10044  2020-01  2020-01-31 2020-01-31   7992.0 -0.098592     3.0   11.0   \n",
+       "10051  2020-01  2020-01-31 2020-01-31   7999.0 -0.115176     1.0   11.0   \n",
+       "...                    ...        ...      ...       ...     ...    ...   \n",
+       "11407  2020-01  2020-01-31 2020-01-31  53120.0  0.050475     4.0   73.0   \n",
+       "11441  2020-01  2020-01-31 2020-01-31   9278.0  0.152941     3.0   11.0   \n",
+       "11442  2020-01  2020-01-31 2020-01-31   9280.0 -0.069555     3.0   11.0   \n",
+       "11481  2020-01  2020-01-31 2020-01-31   9312.0  0.030530     3.0   11.0   \n",
+       "11499  2020-01  2020-01-31 2020-01-31    176.0 -0.007833     3.0   11.0   \n",
+       "\n",
+       "               dlstcd  dlret   ret_adj  \n",
+       "permno Mdate                            \n",
+       "10026  2020-01   None      0 -0.100016  \n",
+       "10028  2020-01   None      0  0.607407  \n",
+       "10032  2020-01   None      0 -0.075643  \n",
+       "10044  2020-01   None      0 -0.098592  \n",
+       "10051  2020-01   None      0 -0.115176  \n",
+       "...               ...    ...       ...  \n",
+       "11407  2020-01   None      0  0.050475  \n",
+       "11441  2020-01   None      0  0.152941  \n",
+       "11442  2020-01   None      0 -0.069555  \n",
+       "11481  2020-01   None      0  0.030530  \n",
+       "11499  2020-01   None      0 -0.007833  \n",
+       "\n",
+       "[100 rows x 9 columns]"
       ]
      },
      "execution_count": null,
@@ -1769,7 +1939,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df.head(0)"
+    "df"
    ]
   },
   {
