--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -33,15 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wrds "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#|exports\n",
     "from __future__ import annotations\n",
     "from pathlib import Path\n",
@@ -1792,6 +1783,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "df = clean(obs_limit=100)\n",
     "df"
    ]
