started wrds.ibes module

--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -598,6 +598,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging IBES and CRSP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "ibes_permnos = wrds_api.download('SELECT * FROM wrdsapps_link_crsp_ibes.ibcrsphist LIMIT 100')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>permno</th>\n",
+       "      <th>ncusip</th>\n",
+       "      <th>sdate</th>\n",
+       "      <th>edate</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0000</td>\n",
+       "      <td>14471.0</td>\n",
+       "      <td>87482X10</td>\n",
+       "      <td>2014-02-20</td>\n",
+       "      <td>2016-08-31</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0001</td>\n",
+       "      <td>14392.0</td>\n",
+       "      <td>26878510</td>\n",
+       "      <td>2014-02-20</td>\n",
+       "      <td>2019-05-22</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2019-06-20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0004</td>\n",
+       "      <td>14418.0</td>\n",
+       "      <td>02504D10</td>\n",
+       "      <td>2014-02-20</td>\n",
+       "      <td>2018-08-24</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000R</td>\n",
+       "      <td>14378.0</td>\n",
+       "      <td>14163310</td>\n",
+       "      <td>2014-02-20</td>\n",
+       "      <td>2020-02-10</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>007X</td>\n",
+       "      <td>14750.0</td>\n",
+       "      <td>81761R10</td>\n",
+       "      <td>2014-08-14</td>\n",
+       "      <td>2020-10-04</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>007X</td>\n",
+       "      <td>14750.0</td>\n",
+       "      <td>88087E10</td>\n",
+       "      <td>2020-10-15</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0080</td>\n",
+       "      <td>14784.0</td>\n",
+       "      <td>G6S01W10</td>\n",
+       "      <td>2014-08-14</td>\n",
+       "      <td>2015-12-17</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>0080</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2016-01-14</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>008A</td>\n",
+       "      <td>14828.0</td>\n",
+       "      <td>78667J10</td>\n",
+       "      <td>2014-08-14</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ticker   permno    ncusip       sdate       edate  score\n",
+       "0    0000  14471.0  87482X10  2014-02-20  2016-08-31    1.0\n",
+       "1    0001  14392.0  26878510  2014-02-20  2019-05-22    1.0\n",
+       "2    0001      NaN      None  2019-06-20        None    6.0\n",
+       "3    0004  14418.0  02504D10  2014-02-20  2018-08-24    1.0\n",
+       "4    000R  14378.0  14163310  2014-02-20  2020-02-10    1.0\n",
+       "..    ...      ...       ...         ...         ...    ...\n",
+       "95   007X  14750.0  81761R10  2014-08-14  2020-10-04    1.0\n",
+       "96   007X  14750.0  88087E10  2020-10-15  2022-03-31    1.0\n",
+       "97   0080  14784.0  G6S01W10  2014-08-14  2015-12-17    1.0\n",
+       "98   0080      NaN      None  2016-01-14  2019-12-31    6.0\n",
+       "99   008A  14828.0  78667J10  2014-08-14  2022-03-31    1.0\n",
+       "\n",
+       "[100 rows x 6 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "ibes_permnos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
